--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E+I's Shop For Beef And Other Things!</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1155px)" href="/css/phone.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1155px)" href="css/phone.css">
 </head>
 
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="/wlogo.jpg">
+            <img src="wlogo.jpg">
         </div>
 
         <ul>
@@ -41,7 +41,7 @@
 	 
         <section style="text-align: center;">
 	<div>
-            <p>Our Store</p><br><img src="/img/bg6.png"><br><p>located at spawn</p>
+            <p>Our Store</p><br><img src="bg6.png"><br><p>located at spawn</p>
         </div>
     </section>
     <br><br><br><br><br>
